--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -6,6 +6,9 @@
  	<link rel="stylesheet" href="css/graf.css">
  	<link rel="stylesheet" href="lib/pure/pure-min.css">
 	<link rel="stylesheet" href="lib/jquery/ui/1.12.1/themes/base/jquery-ui.css">
+	<script type="text/javascript" src="lib/jquery/jquery-3.2.1.min.js"></script>
+	<script type="text/javascript" src="lib/jquery/ui/1.12.1/jquery-ui.js"></script>
+	<script type="text/javascript" src="lib/svgtool/svg-pan-zoom.js"></script>
 	<script type="text/javascript" src="script/util.js"></script>
 	<script type="text/javascript" src="script/strategic.js"></script>
 	<script type="text/javascript" src="script/service.js"></script>
@@ -13,8 +16,7 @@
 	<script type="text/javascript" src="script/business.js"></script>
 	<script type="text/javascript" src="script/actor.js"></script>
 	<script type="text/javascript" src="script/view.js"></script>
-	<script type="text/javascript" src="lib/jquery/jquery-3.2.1.min.js"></script>
-	<script type="text/javascript" src="lib/jquery/ui/1.12.1/jquery-ui.js"></script>
+	
 	<script>
 		function displayLogic(){
 			hideToolBox();
@@ -92,17 +94,42 @@
       <input id="horizontal-spinner" class="ui-spinner-input">
       <button>Book Now!</button-->
 		</div>
-		
 	</td></tr>
 	<tr style="height:100%"><td>
-		<object id="frame" type="image/svg+xml" data="" style="width:100%;height:100%"></object>
+		<svg id="frame" style="width:100%;height:100%"></svg>
+		<!--object id="frame" type="image/svg+xml" data="" onload="onFrameLoad()" style="width:100%;height:100%"></object-->
+		
 		<!--img id="frame" src="" style="width:100%;height:100%"-->
 		<!--iframe id="frame" style="width:100%;height:100%" scrolling="yes"></iframe-->
 	<!--img id="frame" src="views/view_process.php?id=1" style="width:100%;height:100%"/-->
+	
+	
+	
+<script type="text/javascript">
+$(function() {
+  /*panZoomInstance = svgPanZoom('#frame', {
+    zoomEnabled: true,
+    controlIconsEnabled: true,
+    fit: true,
+    center: true,
+    minZoom: 0.1
+  });*/
+  
+  // zoom out
+  //panZoomInstance.zoom(0.2)
+
+  /*$("#move").on("click", function() {
+    // Pan by any values from -80 to 80
+    panZoomInstance.panBy({x: Math.round(Math.random() * 160 - 80), y: Math.round(Math.random() * 160 - 80)})
+  });*/
+})
+</script>
+
 	</td></tr>
 	</tbody>
 	</table>
 </div>
+<div id="frameMenu" style="display:none;z-index:1000;right:0px;position: absolute;"><button><img style="height:14px" src="images/82.png"/></button><button><img style="height:14px" src="images/83.png"/></button></div>
 <div id="popup" style="display:none">
 </div>
 <form id="update_view_form" style="display:none" class="pure-form pure-form-aligned">
@@ -408,9 +435,6 @@
 	<button onclick='doCreateServiceInstance()'><img style="height:14px" src="images/78.png"/> cr&eacute;er</button>
 	<button onclick='$("#create_instance_form").dialog("close");'><img style="height:14px" src="images/33.png"/> annuler</button>
 </form>
-<!--img id="frame" src="" style="width:90%;height:94%;position:absolute;right:0;bottom:0px"/-->
-<!--iframe id="frame" style="width:90%;height:94%;position:absolute;right:0;bottom:0px">
-</iframe-->
 <script>
 	function refreshEnvironmentList(){
 		$.getJSON("api/environment.php", function(result){
